fix: fix wrong filtering condition and change url to be saved properly